# Drone-Simulator

./: CMakeLists.txt  README.md  main.cpp
connector/: connector.py  geoscan_uav.py  main.py  proto.py
connector/cache/: Copter.xml  Modules.xml  Offsets.xml  Sensors.xml  State.xml
connector/caches/cache0/: Imu.xml
connector/caches/cache1/: Flight.xml
connector/caches/cache4/: SensorMux.xml  State.xml
simContainer/: Dockerfile  Dockerfile_test
simContainer/sim/: Autopilot  cursed_gui.py  file_parser.py  geoscan_uav.py  proto.py  requirements.txt  simulator  simulator-cli  start.sh  start_test.sh
simContainer/sim/connector/: connector.py  proto.py
simContainer/sim/root/: Board.xml  cursed_gui.py
src/: ConnectService.py  Drone.cpp  Drone.h  Drone.py  DroneConnection.py  DroneConnector.py  DronePhysics.cpp  DronePhysics.h  DronePhysics.py  Scene.py  State.cpp  State.py  TestData.py  Vector.cpp  Vector.h  Vector.py  Window.py  main.py  СonvertService.py
src/DockerService/: DockerService.py  config.ini
src/visualization/: package-lock.json  package.json
src/visualization/public/: index.html
src/visualization/src/: App.css  App.js  Controller.css  Controller.js  Drone.js  DronesRenderer.js  ParseData.js  Scene.js  index.js
src2/: DronePhysics.py  Vector.py  main.py
